@@ -1,3 +1,7 @@
+2011-05-27 Martin Grunewald  <Martin.Grunewald@cern.ch>
+	* tag V01-05-48
+	* protect for null-pointer exception in ParameterTreeModel.java
+
 2011-05-26 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-47
 	* Display datasets and unassigned input tags of selected path
